force-app/main/default/objects/BotOrder__c/BotOrder__c.object-meta.xml
<CustomObject>
    <label>Bot Order</label>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>