force-app/main/default/objects/BotOrder__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>